--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nanoid": "^4.0.1",
     "nodemailer": "^6.9.1",
     "sharp": "^0.31.3",
+    "socket.io": "^4.6.1",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   },
