--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nodemailer": "^6.9.1",
     "sharp": "^0.31.3",
     "socket.io": "^4.6.1",
+    "twilio": "^4.10.0",
     "validator": "^13.9.0",
     "xss-clean": "^0.1.1"
   },
